--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 
 @font-face {
-  font-family: "Proxima Nova";
-  src: url("./fonts/Proxima\ Nova\ Alt\ Regular.otf");
-  src: url("./fonts/Proxima\ Nova\ Alt\ Semibold.otf");
-  src: url("./fonts/Proxima\ Nova\ Alt\ Thin.otf");
-  src: url("./fonts/Proxima\ Nova\ Bold.otf");
-  src: url("./fonts/ProximaNova-Regular.otf");
+    font-family: "Proxima Nova";
+    src: url("./fonts/Proxima\ Nova\ Alt\ Regular.otf");
+    font-weight: 400;
+    
+}
+@font-face {
+    font-family: "Proxima Nova";
+    src: url("./fonts/Proxima\ Nova\ Bold.otf");
+    font-weight: 700;
+    
+}
+
+@font-face {
+    font-family: "Proxima Nova";
+    src: url("./fonts/Proxima\ Nova\ Alt\ Semibold.otf");
+    font-weight: 600;
+    
+}
+
+@font-face {
+    font-family: "Proxima Nova";
+    src: url("./fonts/Proxima\ Nova\ Alt\ Thin.otf");
+    font-weight: 100;
+    
+}
   
-  }
+body {
+    margin: 0;
+    font-family: 'Proxima Nova', sans-serif;
+    
+}
 
 body {
   margin: 0;
